force-app/main/default/objects/Competitive_Sales_Request__c/Competitive_Sales_Request__c.object-meta.xml
<CustomObject>
    <label>Competitive Sales Request</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>S.M.A.R.T. SA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Sales Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>