force-app/main/default/objects/Competitive_Sales_Request__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>WHS or DSP</description>
    <label>Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>