force-app/main/default/objects/Competitive_Sales_Request__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of the SA Sales. Date is based on the month and year...</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>