force-app/main/default/objects/Competitive_Sales_Request__c/fields/Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Date_Month__c</fullName>
    <formula>IF(MONTH(Date__c) &gt;= 12,&quot;12&quot;,
IF(MONTH(Date__c) &gt;= 11,&quot;11&quot;,
IF(MONTH(Date__c) &gt;= 10,&quot;10&quot;, 
IF(MONTH(Date__c) &gt;= 9, &quot;09&quot;,
IF(MONTH(Date__c) &gt;= 8, &quot;08&quot;,
IF(MONTH(Date__c) &gt;= 7, &quot;07 &quot;,
IF(MONTH(Date__c) &gt;= 6, &quot;06&quot;,
IF(MONTH(Date__c) &gt;= 5, &quot;05&quot;,
IF(MONTH(Date__c) &gt;= 4, &quot;04&quot;,
IF(MONTH(Date__c) &gt;= 3, &quot;03&quot;, 
IF(MONTH(Date__c) &gt;= 2, &quot;02&quot;, 
IF(MONTH(Date__c) &gt;= 1, &quot;01&quot;,
NULL))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date (MTH)</label>
    <type>Text</type>
</CustomField>