force-app/main/default/objects/Competitive_Sales_Request__c/fields/Date_QTR__c.field-meta.xml
<CustomField>
    <fullName>Date_QTR__c</fullName>
    <formula>IF(MONTH(Date__c) &gt;= 10, &quot;Q4&quot;, 
IF(MONTH(Date__c) &gt;= 7, &quot;Q3&quot;, 
IF(MONTH(Date__c) &gt;= 4, &quot;Q2&quot;, 
IF(MONTH(Date__c) &gt;= 1, &quot;Q1&quot;, 
NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date (QTR)</label>
    <type>Text</type>
</CustomField>