force-app/main/default/objects/Competitive_Sales_Request__c/fields/Date_YR__c.field-meta.xml
<CustomField>
    <fullName>Date_YR__c</fullName>
    <formula>TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date(YR)</label>
    <type>Text</type>
</CustomField>