force-app/main/default/objects/Competitive_Sales_Request__c/fields/ItemID__c.field-meta.xml
<CustomField>
    <fullName>ItemID__c</fullName>
    <label>ItemID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>