force-app/main/default/objects/Competitive_Sales_Request__c/fields/Sales_Allowance_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Allowance_Number__c</fullName>
    <label>Sales Allowance Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>