force-app/main/default/objects/Competitive_Sales_Request__c/fields/Stock_Class__c.field-meta.xml
<CustomField>
    <fullName>Stock_Class__c</fullName>
    <label>Stock Class</label>
    <length>5</length>
    <type>Text</type>
</CustomField>