force-app/main/default/objects/Competitive_Sales_Request__c/fields/Total_LND__c.field-meta.xml
<CustomField>
    <fullName>Total_LND__c</fullName>
    <inlineHelpText>Total Landed Cost</inlineHelpText>
    <label>Total LND</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>