force-app/main/default/objects/Competitive_Sales_Request__c/fields/Total_PRC__c.field-meta.xml
<CustomField>
    <fullName>Total_PRC__c</fullName>
    <inlineHelpText>Total Price</inlineHelpText>
    <label>Total PRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>