force-app/main/default/objects/Competitive_Sales_Request__c/fields/Total_QTY__c.field-meta.xml
<CustomField>
    <fullName>Total_QTY__c</fullName>
    <inlineHelpText>Total Quantity</inlineHelpText>
    <label>Total QTY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>