force-app/main/default/objects/Competitive_Sales_Request__c/fields/Total_SDN__c.field-meta.xml
<CustomField>
    <fullName>Total_SDN__c</fullName>
    <inlineHelpText>Total Standard Net</inlineHelpText>
    <label>Total SDN</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>